<resources>
    <string name="app_name">BYS CRM HBC</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="txt_username">Tên đăng nhập</string>
    <string name="txt_password">Mật khẩu</string>
    <string name="txt_login">Đăng nhập</string>
    <string name="txt_forgot_password">Quên mật khẩu?</string>
    <string name="txt_get_passowrd">Lấy lại mật khẩu</string>
    <string name="txt_enter_email">Nhập địa chỉ email</string>
    <string name="txt_please_enter_email">Vui lòng nhập Email để nhận mã xác nhận.</string>
    <string name="txt_cancel">Huỷ</string>
    <string name="txt_confirm">Xác nhận</string>
    <string name="txt_email">Email</string>
    <string name="txt_enter_code_confirm">Nhập mã xác nhận</string>
    <string name="txt_please_enter_code_confirm">Vui lòng nhập mã xác nhận đã được gửi đến email</string>
    <string name="txt_resend_code">Không nhận được mã xác nhận. Gửi lại</string>
    <string name="txt_back">Quay lại</string>
    <string name="txt_continue">Tiếp tục</string>
    <string name="txt_copy_right">Copyright © 2018 Bản quyền thuộc về BYS</string>
    <string name="txt_customer">Khách hàng</string>
    <string name="txt_hint_enter_text">Nhập chữ</string>
    <string name="txt_hint_enter_number">Nhập số</string>
    <string name="txt_hint_enter_email">Nhập email</string>
    <string name="txt_hint_pick_date">Chọn ngày</string>
    <string name="txt_full_name">Tên khách hàng</string>
    <string name="txt_full_name_color">Tên khách hàng<font color='#ff0000'>*</font></string>
    <string name="txt_main_email">Email chính</string>
    <string name="txt_sub_email">Email phụ</string>
    <string name="txt_main_phone">Điện thoại chính</string>
    <string name="txt_sub_phone">Số điện thoại phụ</string>
    <string name="txt_address">Địa chỉ</string>
    <string name="txt_website">Website</string>
    <string name="txt_fax">Fax</string>
    <string name="txt_stock_code">Mã số chứng khoán</string>
    <string name="txt_tax_code">Mã số thuế</string>
    <string name="txt_customer_type">Loại khách hàng</string>
    <string name="txt_contact">Liên hệ</string>
    <string name="txt_career">Nghành nghề</string>
    <string name="txt_group">Nhóm</string>
    <string name="txt_rate">Đánh giá</string>
    <string name="txt_classify">Phân loại</string>
    <string name="txt_revenue">Doanh thu hàng năm</string>
    <string name="txt_assign">Phân công cho</string>
    <string name="txt_potential">Nguồn tiềm năng</string>
    <string name="txt_assign_color">Phân công cho<font color='#ff0000'>*</font></string>
    <string name="txt_company_establish">Ngày thành lập</string>
    <string name="txt_create_customer">Tạo khách hàng</string>
    <string name="txt_division">Phân công cho: </string>
    <string name="txt_choose_assigner">Chọn người phân công</string>
    <string name="txt_plz_choose_assigner">Vui lòng chọn người phân công</string>
    <string name="txt_choose_customer_type">Chọn loại khách hàng</string>
    <string name="txt_choose_classify">Chọn phân loại</string>
    <string name="txt_choose_group">Chọn nhóm</string>
    <string name="txt_no_data">Không có dữ liệu</string>
    <string name="txt_customer_infor">%1$s / Phân công cho: %2$s</string>
    <string name="txt_manage_logout">Đăng xuất</string>
    <string name="txt_plz_enter_customer_name">Vui lòng nhập tên khách hàng</string>
    <string name="txt_validate_phone">Số điện thoại phải có ít nhất 10 chữ số và không được vượt quá 20 chữ số</string>
    <string name="txt_validate_fax">Fax phải có ít nhất 10 chữ số và không được vượt quá 20 chữ số</string>
    <string name="txt_passport">CMND</string>
    <string name="txt_passport_clor">CMND<font color='#ff0000'>*</font></string>
    <string name="txt_plz_enter_passport">Vui lòng nhập CMND</string>
    <string name="txt_not_have_phone">Không có số điện thoại</string>
    <string name="txt_not_have_email">Không có email</string>
    <string name="txt_are_you_sure_logout">Bạn có chắc chắn bạn muốn đăng xuất không?</string>
    <string name="txt_are_you_sure_delete_customer">Bạn có chắc chắn bạn muốn xóa khách hàng này không?</string>
    <string name="txt_yes">Có</string>
    <string name="txt_no">Không</string>
    <string name="txt_delete_customer_success">Xóa khách hàng thành công</string>
    <string name="txt_add_customer_success">Thêm khách hàng thành công</string>
    <string name="txt_edit_customer_success">Sửa khách hàng thành công</string>
    <string name="txt_email_invalid">Email không hợp lệ</string>
    <string name="txt_plz_enter_cmnd">Vui lòng nhập chứng minh nhân dân</string>
    <string name="txt_update_customer">Cập nhật thông tin</string>
    <string name="txt_discuss_detail">Mô tả chi tiết</string>
    <string name="txt_are_you_sure_cancel">Bạn có chắc chắn muốn hủy thao tác không?</string>
    <string name="txt_phone_duplicate">Số điện thoại này đã tồn tại trong hệ thống</string>
    <string name="txt_cmnd_duplicate">Chứng minh nhân dân này đã tồn tại trong hệ thống</string>
    <string name="txt_note">Ghi chú</string>
    <string name="txt_event">Sự kiện</string>
    <string name="txt_work">Công việc</string>
    <string name="txt_active">Hoạt động</string>
    <string name="txt_account">Tài khoản</string>
    <string name="txt_gender">Giới tính</string>
    <string name="txt_employees_code">Mã nhân viên</string>
    <string name="txt_employees_code_2">Mã nhân viên: %1$s</string>
    <string name="txt_employees_branch">Bộ phận: %1$s</string>
    <string name="txt_fullname">Họ và tên</string>
    <string name="txt_input_fullname">Nhập họ và tên</string>
    <string name="txt_address_3">Nơi sinh</string>
    <string name="txt_phone">Điện thoại</string>
    <string name="txt_phone_number">Số điện thoại</string>
    <string name="txt_enter_phone_number">Nhập số điện thoại</string>
    <string name="txt_birthday">Ngày sinh</string>
    <string name="txt_female">Nữ</string>
    <string name="txt_male">Nam</string>
    <string name="txt_hint_pick_datetime">Chọn ngày, giờ</string>
    <string name="txt_address_2">Địa chỉ</string>
    <string name="txt_enter_address_2">Nhập địa chỉ</string>
    <string name="txt_ok">OK</string>
    <string name="txt_discipline_detail">Chi tiết kỷ luật</string>
    <string-array name="arr_capture">
        <item>Chụp ảnh</item>
        <item>Chọn từ Gallery</item>
        <item>Xóa ảnh</item>
    </string-array>
    <string-array name="arr_capture_2">
        <item>Chụp ảnh</item>
        <item>Chọn từ Gallery</item>
    </string-array>
    <string name="txt_warning_plz_input_username">Vui lòng nhập tên đăng nhập</string>
    <string name="txt_warning_plz_input_password">Vui lòng nhập mật khẩu</string>
    <string name="txt_warning_plz_input_new_password">Vui lòng nhập mật khẩu mới</string>
    <string name="txt_waiting">Đang xử lý...</string>
    <string name="err_network_available">Vui lòng kiểm tra kết nối mạng</string>
    <string name="err_unexpected_exception">Vui lòng thử lại!</string>
    <string name="txt_warning_login_fail">Thông tin đăng nhập của bạn không chính xác. Vui lòng thử lại</string>
    <string name="txt_choose_department">Chọn bộ phận</string>
    <string name="txt_plz_input">Vui lòng nhập&#160;</string>
    <string name="txt_plz_choose">Vui lòng chọn&#160;</string>
    <string name="txt_plz_input_email">Vui lòng nhập email</string>
    <string name="txt_email_not_exist">Email không tồn tại</string>
    <string name="txt_plz_enter_code">Vui lòng nhập mã xác nhận</string>
    <string name="txt_enter_code_incorrect">Mã xác nhận không chính xác. Vui lòng thử lại.</string>
    <string name="txt_change_password">Thay đổi mật khẩu</string>
    <string name="txt_enter_new_password_confirm">Vui lòng nhập mật khẩu mới và xác nhận</string>
    <string name="txt_new_password">Mật khẩu mới</string>
    <string name="txt_confirm_password">Xác nhận mật khẩu</string>
    <string name="txt_agree">Đồng ý</string>
    <string name="txt_confirm_password_incorrect">Mật khẩu xác nhận không trùng với mật khẩu mới</string>
    <string name="txt_change_password_successfully">Lấy lại mật khẩu thành công</string>
    <string name="txt_resend_code_successfully">Đã gửi lại mã xác nhận thành công.</string>
    <string name="txt_change_profile">Thay đổi hồ sơ</string>
    <string name="txt_request_change_profile">Gửi yêu cầu thay đổi</string>
    <string name="txt_request_change_profile_successfully">Gửi yêu cầu thay đổi thành công</string>
    <string name="txt_menu_delivery_points">Các điểm giao hàng</string>
    <string name="txt_menu_my_location">Vị trí của tôi</string>
    <string name="txt_menu_delivery_history">Lịch sử giao hàng</string>
    <string name="txt_menu_delivery_absent">Xin nghỉ phép</string>
    <string name="txt_list">Danh sách</string>
    <string name="txt_map">Bản đồ</string>
    <string name="txt_nickname">Danh xưng</string>
    <string name="txt_name">Tên</string>
    <string name="txt_first_name">Họ</string>
    <string name="txt_pos">Chức danh</string>
    <string name="txt_input_name">Nhập tên</string>
    <string name="txt_status_progressing">Đang xử lý</string>
    <string name="txt_status_dont_progressing">Chưa xử lý</string>
    <string name="txt_status_cancel">Đã huỷ</string>
    <string name="txt_status_trouble">Gặp sự cố</string>
    <string name="txt_status_progressed">Đã xử lý</string>
    <string name="txt_current_location">Vị trí hiện tại</string>
    <string name="txt_call_receiver">Gọi người nhận</string>
    <string name="txt_show_detail">Xem chi tiết</string>
    <string name="txt_delete_filter">Xoá bộ lọc</string>
    <string name="txt_status_delivery_points">Trạng thái điểm giao hàng</string>
    <string name="txt_date_delivery">Ngày giao hàng</string>
    <string name="txt_filter">Bộ lọc</string>
    <string name="txt_view_photo_point">Xem hình ảnh đã giao hàng</string>
    <string name="txt_view_photo_trouble">Xem hình ảnh sự cố</string>
    <string name="txt_report_trouble">Báo cáo sự cố</string>
    <string name="txt_delivered">Đã giao hàng</string>
    <string name="txt_call">Gọi</string>
    <string name="txt_view_list">Xem dsach</string>
    <string name="txt_delivery_code">Mã giao hàng</string>
    <string name="txt_order_code">Mã đơn hàng</string>
    <string name="txt_customer_code">Mã khách hàng</string>
    <string name="txt_customer_name">Tên người nhận</string>
    <string name="txt_product_list">Danh sách sản phẩm</string>
    <string name="txt_expect_time">Thời gian mong đợi</string>
    <string name="txt_start_processing">Bắt đầu xử lý</string>
    <string name="txt_continue_delivery">Tiếp tục giao hàng</string>
    <string name="txt_detail_delivery">Chi tiết điểm giao hàng</string>
    <string name="txt_time_delivery">Thời gian giao</string>
    <string name="txt_images_delivery">Hình ảnh đã giao hàng</string>
    <string name="txt_add_images">Thêm hình ảnh</string>
    <string name="txt_report_delivered">Báo cáo đã giao hàng</string>
    <string name="txt_report_finished">Báo cáo hoàn thành</string>
    <string name="txt_trouble_type">Loại sự cố</string>
    <string name="txt_description">Mô tả</string>
    <string name="txt_delivery_location">Vị trí giao hàng</string>
    <string name="txt_find_order_code">Tìm theo mã giao hàng, tên khách hàng </string>
    <string name="txt_menu_work_manage">Quản lý công việc</string>
    <string name="txt_menu_work_history">Lịch sử công việc</string>
    <string name="txt_menu_profile">Hồ sơ nhân sự</string>
    <string name="txt_start_date">Từ ngày %1$s</string>
    <string name="txt_end_date">Đến ngày %1$s</string>
    <string name="txt_work_name">Tên công việc</string>
</resources>