<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <include layout="@layout/navigation_header_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <bys.crm.hbc.views.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/txt_enter_email"
            android:textColor="@color/text_color_bule"
            android:textSize="@dimen/text_small_14"
            font:fontText="fonts/sf_pro_display_regular.otf" />

        <bys.crm.hbc.views.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/txt_please_enter_email"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_small_13"
            font:fontText="fonts/sf_pro_display_regular.otf" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:hint="@string/txt_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="@dimen/text_small_14"
            app:met_accentTypeface="fonts/sf_pro_display_regular.otf"
            app:met_baseColor="@color/text_color"
            app:met_floatingLabel="normal"
            app:met_floatingLabelTextColor="@color/hint_color"
            app:met_primaryColor="@color/hint_color"
            app:met_textColorHint="@color/hint_color"
            app:met_typeface="fonts/sf_pro_display_regular.otf"
            app:met_underlineColor="@color/hint_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <bys.crm.hbc.views.CustomFontButton
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:gravity="center"
                android:text="@string/txt_cancel"
                android:textColor="#fff"
                android:textSize="@dimen/text_small_14"
                android:textStyle="bold"
                android:visibility="visible"
                font:fontText="fonts/sf_pro_display_regular.otf" />

            <bys.crm.hbc.views.CustomFontButton
                android:id="@+id/btn_confirm"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:gravity="center"
                android:text="@string/txt_confirm"
                android:textColor="#fff"
                android:textSize="@dimen/text_small_14"
                android:textStyle="bold"
                android:visibility="visible"
                font:fontText="fonts/sf_pro_display_regular.otf" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>