<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/bg_login" />

        <bys.crm.hbc.views.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:text="@string/txt_copy_right"
            android:textColor="#2096B5"
            android:textSize="@dimen/text_small_13"
            font:fontText="fonts/sf_pro_display_regular.otf" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_logo_login"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="-20dp"
            android:src="@drawable/ic_logo_login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="@dimen/margin_top_logo_login"
            android:orientation="vertical">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_user_name"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:hint="@string/txt_username"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/text_small_14"
                app:met_accentTypeface="fonts/sf_pro_display_regular.otf"
                app:met_baseColor="@color/text_color"
                app:met_floatingLabel="normal"
                app:met_floatingLabelTextColor="#0BB2CA"
                app:met_primaryColor="#0BB2CA"
                app:met_textColorHint="@color/hint_color"
                app:met_typeface="fonts/sf_pro_display_regular.otf"
                app:met_underlineColor="#0BB2CA" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edittext_margin_top"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:hint="@string/txt_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/text_small_14"
                app:met_accentTypeface="fonts/sf_pro_display_regular.otf"
                app:met_baseColor="@color/text_color"
                app:met_floatingLabel="normal"
                app:met_floatingLabelTextColor="#0BB2CA"
                app:met_primaryColor="#0BB2CA"
                app:met_textColorHint="@color/hint_color"
                app:met_typeface="fonts/sf_pro_display_regular.otf"
                app:met_underlineColor="#0BB2CA" />


            <bys.crm.hbc.views.CustomFontButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/margin_top_btn_login"
                android:background="@drawable/bg_button"
                android:gravity="center"
                android:text="@string/txt_login"
                android:textColor="#fff"
                android:textSize="@dimen/text_small_14"
                android:textStyle="bold"
                android:visibility="visible"
                font:fontText="fonts/sf_pro_display_regular.otf" />

            <bys.crm.hbc.views.CustomFontTextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="35dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/txt_forgot_password"
                android:textColor="@color/sl_text_forgot_password"
                android:textSize="@dimen/text_small_13"
                font:fontText="fonts/sf_pro_display_regular.otf" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>